# magicbox-infra

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.agents/skills/add-infra-command/: SKILL.md
.agents/skills/manage-secrets/: SKILL.md
.agents/skills/write-adr/: SKILL.md
.agents/skills/write-playbook/: SKILL.md
.claude/commands/: implement-plan.md
adr/: 001-bootstrap.md  002-alpine-update.md  003-group-vars-layout.md  004-check-portainer-status.md
ansible/: ansible.cfg
ansible/inventory/: hosts.example.yml
ansible/inventory/group_vars/all/: vars.yml
ansible/playbooks/: healthcheck.yml  os-update.yml  portainer-status.yml
docs/: CONSTITUTION.md  PRINCIPLES.md  PROJECT-STRUCTURE.md  STACK.md
secrets/: .vault_pass.example  vars.example.yml
src/: cli.rs  config.rs  engine.rs  error.rs  main.rs
src/commands/: healthcheck.rs  mod.rs  os_update.rs  portainer_status.rs
tests/: cli.rs
